Fixed spacing range input label

--- a/src/components/range/styles.scss
+++ b/src/components/range/styles.scss
@@ -11,7 +11,7 @@
   }
 
   .form-control-label {
-    padding: 0;
+    margin-bottom: 0;
     display: block;
 
     font-weight: 600;
