--- a/src/components/select/styles.scss
+++ b/src/components/select/styles.scss
@@ -11,9 +11,6 @@
   }
 
   .form-control-label {
-    padding-top: 0;
-    padding-left: 0;
-    padding-right: 0;
     display: block;
 
     font-weight: 600;
